Fix text wrapping for <pre> tags

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -97,6 +97,7 @@
 		padding: 0.5rem 1rem;
 		margin: 1.6rem 0;
 		position: relative;
+		white-space: normal;
 	}
 
 	pre,
